<resources>
    <string name="app_name">Pairwise Comparison</string>
    <string name="title_add_new_comparison">Add new comparison</string>
    <string name="title_add_new_option">Add new option</string>
    <string name="title_edit_comparison">Rename comparison</string>
    <string name="title_edit_option">Rename option</string>
    <string name="tab_result">Result</string>
    <string name="tap_options">Options</string>
    <string name="tab_option_comparison">Compare</string>
    <string name="hint_option_name">Option name</string>
    <string name="hint_comparison_name">Comparison name</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="error_empty_option_name">Option name can\'t be empty</string>
    <string name="error_empty_prompt_text">Prompt text can\'t be empty</string>
    <string name="error_empty_comparison_name">Comparison name can\'t be empty</string>
    <string name="description_click_to_add">Click the + button to add</string>
    <string name="title_no_comparisons">No Comparisons</string>
    <string name="title_no_options">No Options</string>
    <string name="title_no_option_comparisons">Nothing to compare</string>
    <string name="description_no_option_comparisons">Click the + button to add some options</string>
    <string name="title_no_results">No results</string>
    <string name="description_no_results">Add some options and compare them first</string>
    <string name="menu_licenses">Licenses</string>
    <string name="snackbar_pie_chart_saved">Pie chart image saved to the gallery</string>
    <string name="snackbar_bar_chart_saved">Bar chart image saved to the gallery</string>
    <string name="snackbar_list_saved">List copied to your clipboard</string>
    <string name="snackbar_empty_clipboard">Your clipboard is empty</string>
    <string name="snackbar_nothing_to_compare">Nothing to compare</string>
    <string name="hint_add_option">Add new option…</string>
    <string name="button_add">add</string>
    <string name="button_save">save</string>
    <string name="title_pasted_options">Options from your clipboard:</string>
    <string name="title_prompt_default">Which of these two options is more important?</string>
    <string name="menu_add_from_clipboard">Add options from clipboard</string>
    <string name="menu_recompare_options">Compare options one by one</string>
    <string name="menu_clear_option_comparisons">Clear option comparisons</string>
    <string name="title_change_the_prompt">Change the prompt</string>
    <string name="hint_prompt_text">prompt text</string>
    <string name="filter_all">All</string>
    <string name="filter_not_compared">Not compared</string>
    <string name="title_settings">Settings</string>
    <string name="title_prompt_text">Prompt text on compare screen</string>
    <string name="title_show_percentage">Show percentage on result chart</string>
    <string name="title_chart_types">Default chart type</string>
    <string name="title_chart_colors">Chart colors</string>
    <string name="key_prompt_text">prompt_text</string>
    <string name="key_show_percentage">show_percentage</string>
    <string name="key_default_chart">default_chart</string>
    <string name="key_chart_colors">chart_colors</string>
    <string name="title_copy_comparison">Copy comparison</string>
    <string name="hint_old_comparison_name">Old name</string>
    <string name="hint_new_comparison_name">New name</string>
    <string name="hint_copy_option_comparisons">Copy option comparisons</string>


    <string-array name="chart_types">
        <item>Pie Chart</item>
        <item>Bar Chart</item>
        <item>List</item>
    </string-array>

    <string-array name="chart_types_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="chart_colors">
        <item>Colourful colors</item>
        <item>Joyful colors</item>
        <item>Liberty colors</item>
        <item>Material colors</item>
        <item>Pastel colors</item>
        <item>Vordiplom colors</item>
    </string-array>

    <string-array name="chart_colors_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
